# pyramid-affiliate-marketing-bitcoin

./: Cargo.toml  README.md  flake.nix  run.sh
src/: conn.rs  edges.rs  main.rs
src/filter/: blend.rs  bounce.rs  glitch.rs  mod.rs  rainbow.rs
